<resources>
    <string name="app_name">EasyGest</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="valider">valider</string>
    <string name="creer_compte">creer un compte</string>
    <string name="title_activity_gestion">Gestion des Activités</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_versement">Versement</string>
    <string name="menu_credit">Credit</string>
    <string name="menu_listecredit">liste credits</string>
    <string name="menu_changeusername">changer utilisateur</string>
    <string name="menu_changepasword">changer mot de passe</string>
    <string name="repete_password">repeter password</string>
    <string name="creer">creer</string>
    <string name="modif_credit">modifier credit</string>
    <string name="ajouter_credit">Ajouter credit</string>
    <string name="article_1">article 1</string>
    <string name="versement">versement</string>
    <string name="article_2">article 2</string>
    <string name="date">date</string>
    <string name="enregistrer">enregistrer</string>
    <string name="nom_client">nom client</string>
    <string name="date_credit">date credit</string>
    <string name="reste">Reste</string>
    <string name="total_credit">T credits</string>
    <string name="total_versement">T versements</string>
    <string name="total_reste">T restes</string>
    <string name="nouveau_username">nouveau username</string>
    <string name="nouveau_password">nouveau password</string>
    <string name="annuller">Annuller</string>
    <string name="clients">clients</string>
    <string name="nom">nom</string>
    <string name="prenoms">prenom</string>
    <string name="supprimer">supprimer</string>
    <string name="modifier">modifier</string>
    <string name="modifier_article2">modifier</string>
    <string name="telephone">telephone</string>
    <string name="societe">societe</string>
    <string name="email">email</string>
    <string name="residence">residence</string>
    <string name="cni">cni</string>
    <string name="permis">permis</string>
    <string name="code_client">code client</string>
    <string name="passport">passport</string>
    <string name="nouveau_credit">nouveau credit</string>
    <string name="menu_import_export">import/export</string>
    <string name="exporter">sauvegarder</string>
    <string name="importer">restorer</string>
    <string name="parametre">parametres</string>
    <string name="appkey">cle du produit</string>
    <string name="app_owner">proprietaire</string>
    <string name="menu_a_propos">a propos</string>
    <string name="menu_upgrade">upgrade</string>
    <string name="nom_structurestandard">EasyGest gestionnaire de la clientelle</string>
    <string name="slogan_structurestandard">simplicité et efficacité</string>
    <string name="info_solaris">"EasyGest est un produit de solaris systeme structure de the solaris groupe systeme cooporation intervenant dans plusieurs domaines dont l'informatique : conception d'applications mobiles android ,ios conception d'application web (creation de site web ) concception d'application bureatique installation et maintenance de reseaux informatiques maintenance informatique installation de reseaux electrique, les TP et bien d'autres"</string>
    <string name="solaris_systeme_telephone"> solaris systeme inc (225) 0556287703</string>
    <string name="solaris_systeme_email"> Email : solaris@gmail.com</string>
    <string name="recap_credit">recap credit</string>
    <string name="activer_produit">activer produit</string>
    <string name="code">code</string>
    <string name="Mes_credits">Mes credits</string>
    <string name="prix_article_1">prix article 1</string>
    <string name="prix_article_2">prix article 2</string>
    <string name="prenoms_client">prenoms client</string>
    <string name="zero">0</string>
    <string name="somme">somme</string>
    <string name="nbr_account">nbr account</string>
    <string name="nbr_credit">nbr credit</string>
    <string name="total_account">T account</string>
    <string name="Afficher_client">client infos</string>
    <string name="quantite1">qte 1</string>
    <string name="num_cresdit">num credit</string>
    <string name="mes_accounts">Mes accounts</string>
    <string name="faire_un_versement_acc">Versé un account</string>
    <string name="faire_un_versement_credit">Versé un credit</string>
    <string name="histo_credits">Histo credits</string>
    <string name="histo_accounts">Histo accounts</string>
    <string name="menu_account">Account</string>
    <string name="voir_versements">Voir versements</string>
    <string name="account">account</string>
    <string name="recap_account">Recap Account\t\t</string>
    <string name="modif_account">modifier account</string>
    <string name="ajouter_account">Ajouter account</string>
    <string name="ajouter">ajouter</string>
    <string name="liste_credits">liste credits</string>
    <string name="num_account">num</string>
    <string name="modif_versement">modifier versement</string>
    <string name="info_versement">infos versement</string>
    <string name="le_client">le client</string>
    <string name="liste_credit">liste credits</string>
    <string name="owner">owner</string>
    <string name="base_code">code pref</string>
    <string name="parametres">parametres</string>
    <string name="helper_text">caracteres</string>
    <string name="le_propritaire">le propritaire</string>
    <string name="le_telephone">le telephone</string>
    <string name="le_mail">le_mail</string>
    <string name="helper_text_code">base code</string>
    <string name="helper_text_telephone">numero tel</string>
    <string name="helper_text_email">adresse electro</string>
    <string name="ok">OK</string>
    <string name="connection">connection</string>
    <string name="creer_votre_compte">creer votre compte</string>
    <string name="mdp_oublie">mot de passe oublié?</string>
    <string name="action_deconnection">deconnection</string>
    <string name="reinitialiser">reinitialiser</string>
    <string name="mdp_init">reinitialisation du mot de passe</string>
    <string name="menu_sms_resent">revoie msg</string>
    <string name="loading">loading…</string>
    <string name="sending_finish">tous les messages ont étés envoyés</string>
    <string name="not_sms">pas de messages à envoyer</string>
    <string name="lepassword">le mot de passe</string>
    <string name="save_amovible">savegarde sur amovible</string>
    <string name="save_drive">savegarde sur Drive</string>
    <string name="deconnecter_restore">deconnecter l\'application</string>
    <string name="relancer_restore">relancer l\'application</string>
    <string name="restore_premier_pas">restore premier pas</string>
    <string name="designation">designation</string>
    <string name="prix">le prix</string>
    <string name="quantite">la quantite</string>
    <string name="quantite2">qte</string>
    <string name="article_image">article image</string>
    <string name="enregistrer_un_article">enregistrer un article</string>
    <string name="ajouter_article">ajouter article</string>
    <string name="choisir_une_image">image</string>
    <string name="article_ajouter">ajouter</string>
    <string name="article_liste">articles</string>
    <string name="article_en_stock">stock</string>
    <string name="gauche">gauche</string>
    <string name="droite">droite</string>
    <string name="derierre">derierre</string>
    <string name="face">face</string>
    <string name="enreg_image">enregistrer</string>
    <string name="article_popup_modifier">modifier nom</string>
    <string name="article_popup_ajout_stock">ajout stock</string>
    <string name="article_popup_modifier_prix">modifier prix</string>
    <string name="article_popup_enlever_stock">enlever stock</string>
    <string name="article_popup_supprimer">supprimer</string>
    <string name="menu_d_aticle">menu d\'aticle</string>
    <string name="article_popup_detail">detail</string>
    <string name="liste_articles">liste des articles</string>
    <string name="liste_to_credits">liste des credits</string>
    <string name="image_d_article">image d\'article</string>
    <string name="Details_article">Details article</string>
    <string name="modifier_article_1">modifier article</string>
    <string name="modifier_article_2">modifier article</string>
    <string name="description">description</string>
    <string name="article_out_stock">hstock</string>
    <string name="articles">articles</string>
    <string name="repeat_nouveau_password">repeter password</string>
    <string name="repeat_nouveau_username">repeter username</string>
    <string name="export_consigne">export Consigne</string>
    <string name="import_Consigne">import Consigne</string>
    <string name="free_compte">connection directe</string>
    <string name="upgrade_fragment">hello upgrade fragment</string>
    <string name="app_id">application id</string>
    <string name="app_key">cle validation </string>
    <string name="drive_doc_id">document id </string>
    <string name="enregistrer_un_credit">ENREGISTRER UN CREDIT</string>
    <string name="enregistrer_un_account">ENREGISTRER UN ACCOUNT</string>
    <string name="action_ask_key">activation</string>
    <string name="demande_cle">demande cle d\'activation</string>
    <string name="exemple">texte d\'exemple</string>
    <string name="low">low</string>
    <string name="medium">medium</string>
    <string name="high">high</string>
    <string name="permanent">permanent</string>
    <string name="permanent_legend">permanent : licence permanente</string>
    <string name="high_legend">high : 12 mois de licence</string>
    <string name="medium_legend">medium : 6 mois de licence</string>
    <string name="low_legend">low : 2 mois de licence</string>
    <string name="appli_key">appli key</string>
    <string name="modifier_date">modifier la date</string>
    <string name="annuler_credit">annuler le credit</string>
    <string name="annuler_account">annuler l\'account</string>
    <string name="menu_listeaccount">liste accounts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="modifier_article">modifier article</string>
    <string name="prix_article1">prix article 1</string>
    <string name="prix_article2">prix article 2</string>
    <string name="le_nombre">Quantite</string>
    <string name="drive_cle">drive key</string>
    <string name="app_basecode">base code</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>