<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/action_settings"
        android:visible="true"
        app:showAsAction="withText" />
    <item
        android:id="@+id/action_ask_key"
        android:icon="@drawable/baseline_message_24"
        android:title="@string/action_ask_key"
        android:visible="true"
        app:showAsAction="withText" />

    <item
        android:id="@+id/action_deconnecter"
        android:icon="@drawable/ic_power_on"
        android:title="@string/action_deconnection"
        android:visible="true"
        app:showAsAction="never" />
</menu>