<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".vue.ui.versement.VersementFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/editversementcodeclt"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:autofillHints="@string/code_client"
                android:ems="10"
                android:gravity="center_horizontal|center_vertical"
                android:layout_gravity="center_horizontal"
                android:hint="@string/code" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_editversementsomme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editversementsomme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/versement"
                    android:minWidth="250dp"
                    android:ems="10"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="@string/somme"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_editversementdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editversementdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/date"
                    android:minWidth="250dp"
                    android:ems="10"
                    android:gravity="center_horizontal|center_vertical"
                    android:hint="@string/date"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnversement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/enregistrer"
                android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>