<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vue.ActiverProduitActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <EditText
                android:id="@+id/edt_validator_owner"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints="@string/app_owner"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/app_owner"
                android:inputType="text" />

            <EditText
                android:id="@+id/edt_validator_email"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:autofillHints="@string/email"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>


            <EditText
                android:id="@+id/edt_validator_phone"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:autofillHints="@string/telephone"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/telephone"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_validator_email"/>

            <EditText
                android:id="@+id/edt_validator_key"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:autofillHints="@string/app_key"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/app_key"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_validator_phone"/>

            <EditText
                android:id="@+id/edt_validator_basecode"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:autofillHints="@string/app_basecode"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/app_basecode"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt_validator_key"/>
            <Button
                android:id="@+id/btn_validator_key"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/valider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_validator_basecode" />

            <TextView
                android:id="@+id/txt_compte_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_compte"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>